2012-03-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Removed legend in 
	graphic_module_events function due to attachment overload.
	* include/functions_agents.php: Non-init count was bad because 
	normal modules are counted too.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: refixed again, removed the old method
	to put the items, the new method is with top and left instead the margin-top
	and margin-left. 

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: set to blue more light the
	color for unknow status for percentile item, and set the size of items
	create from the wizzard to 20 characteres.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: into the function "html_print_select" removed
	the hardcode style for the selectbox.
	
	* godmode/reporting/visual_console_builder.wizard.php: force the style of
	content table of form.

2012-03-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: apply format to graph in the
	data when show value in percentile item.

2012-03-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/shortcut_bar.php: Fixed Ajax callbacks in this view.

2012-03-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php: Skin is not used on logon error.
	
	Fixes: #3464062
	
	* godmode/menu.php: Delete autorefresh in Pandora db interface.

2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: added lost feature to set into
	the wizard the kind of label ("agent", "module", "agent-module" or empty).

2012-03-12 Miguel de Dios  <miguel.dedios@artica.es>
	